# SmartionShop

./: README.md  data.txt  products.json  pyproject.toml
src/: category.py  creation_logger_mixin.py  main.py  product.py
tests/: conftest.py  test_base_product.py  test_category.py  test_main.py  test_product.py  test_smartphone.py
