[tool.poetry]
name = "oop-1"
version = "0.1.0"
description = ""
authors = ["Artemi Bogatov <aboga99@mail.ru>"]
readme = "README.md"
packages = [{include = "oop"}]

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
[tool.pytest.ini_options]
pythonpath = ["src"]

[flake8]
max-line-length = 88

black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
